<resources>
    <string name="app_name">BillPlease</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="svsEnabled">SVS</string>
    <string name="svsDisabled">SVS</string>
    <string name="gstEnabled">GST</string>
    <string name="gstdisabled">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="Paynow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="bill">Total Bill: </string>
</resources>